FIX: look on mobile for button

--- a/logo_creator/src/components/UiToggle/UiToggle.scss
+++ b/logo_creator/src/components/UiToggle/UiToggle.scss
@@ -7,11 +7,8 @@
   width: 2rem;
   height: 2rem;
   z-index: 30;
-
-  font-family: "Apple Symbols";
-  font-size: 2rem;
-  text-align: center;
-  line-height: 2rem;
+  padding: 0;
+  margin: 0;
 
   border: none;
   border-radius: 50%;
